14/6/2024 Mejoras Comparar imagen y vistaActivity y Global

--- a/3_Yugioh/Yugioh/app/src/main/AndroidManifest.xml
+++ b/3_Yugioh/Yugioh/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         tools:targetApi="31">
         <activity
-            android:name=".Vista.MainActivity"
+            android:name=".Vista.VistaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
