--- a/3_Yugioh/Yugioh/app/src/main/AndroidManifest.xml
+++ b/3_Yugioh/Yugioh/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Yugioh"
         tools:targetApi="31">
         <activity
+            android:name=".tutorialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.Jugar.vsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Vista.Configurar.MenuConfigurar"
             android:exported="false" />
         <activity
