17/7/24 Redes Version Profe

--- a/Cli And/Yugioh/app/src/main/AndroidManifest.xml
+++ b/Cli And/Yugioh/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Yugioh"
         tools:targetApi="31">
+        <activity
+            android:name=".Vista.SalaEspera"
+            android:exported="false" />
         <activity
             android:name=".Vista.RegistroActivity"
             android:exported="false" />
